# PackegeMan

./: CMakeLists.txt  LICENSE  README.md  config.h.in
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  main.cpp
src/clone_entity/: clone_entity.cpp  clone_entity.hpp
src/entity_graph/: entity_graph.cpp  entity_graph.hpp
src/utils/: utils.cpp  utils.hpp
test/: CMakeLists.txt  entity_test.cpp
test/json/: big_entity.json  invalid_entity_file.json  invalid_entityid_in_links.json  invalid_entityid_in_to.json  invalid_json.json  simple_entity.json  test1.json  test2.json
